@@ -175,6 +175,36 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
+comment|/**    * metastore related options that the db is initialized against    */
+specifier|public
+specifier|final
+specifier|static
+name|HiveConf
+operator|.
+name|ConfVars
+index|[]
+name|metaVars
+init|=
+block|{
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|METASTOREDIRECTORY
+block|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|METASTOREWAREHOUSE
+block|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|METASTOREURIS
+block|}
+decl_stmt|;
 specifier|public
 specifier|static
 enum|enum
