@@ -355,24 +355,6 @@ name|hadoop
 operator|.
 name|hive
 operator|.
-name|ql
-operator|.
-name|parse
-operator|.
-name|ParseDriver
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
 name|serde2
 operator|.
 name|Deserializer
@@ -499,21 +481,78 @@ argument_list|(
 literal|"hive.ql.metadata.Hive"
 argument_list|)
 decl_stmt|;
-specifier|private
-name|HiveConf
-name|conf
-decl_stmt|;
-specifier|private
-name|IMetaStoreClient
-name|msc
-decl_stmt|;
 specifier|static
 name|Hive
 name|db
 init|=
 literal|null
 decl_stmt|;
-comment|/**    * get    *    * @param c    * @return    * @exception    *    */
+specifier|private
+name|HiveConf
+name|conf
+init|=
+literal|null
+decl_stmt|;
+specifier|private
+name|ThreadLocal
+argument_list|<
+name|IMetaStoreClient
+argument_list|>
+name|threadLocalMSC
+init|=
+operator|new
+name|ThreadLocal
+argument_list|()
+block|{
+specifier|protected
+specifier|synchronized
+name|Object
+name|initialValue
+parameter_list|()
+block|{
+return|return
+literal|null
+return|;
+block|}
+specifier|public
+specifier|synchronized
+name|void
+name|remove
+parameter_list|()
+block|{
+if|if
+condition|(
+name|this
+operator|.
+name|get
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+operator|(
+operator|(
+name|IMetaStoreClient
+operator|)
+name|this
+operator|.
+name|get
+argument_list|()
+operator|)
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+name|super
+operator|.
+name|remove
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+decl_stmt|;
+comment|/**    * Returns hive object for the current thread. If one is not initialized then a new one is created     * If the new configuration is different in metadata conf vars then a new one is created.    * @param c new Hive Configuration    * @return Hive object for current thread    * @exception    *    */
 specifier|public
 specifier|static
 name|Hive
@@ -525,15 +564,109 @@ parameter_list|)
 throws|throws
 name|HiveException
 block|{
+name|boolean
+name|needsRefresh
+init|=
+literal|false
+decl_stmt|;
+if|if
+condition|(
+name|db
+operator|!=
+literal|null
+condition|)
+block|{
+for|for
+control|(
+name|HiveConf
+operator|.
+name|ConfVars
+name|oneVar
+range|:
+name|HiveConf
+operator|.
+name|metaVars
+control|)
+block|{
+name|String
+name|oldVar
+init|=
+name|db
+operator|.
+name|getConf
+argument_list|()
+operator|.
+name|getVar
+argument_list|(
+name|oneVar
+argument_list|)
+decl_stmt|;
+name|String
+name|newVar
+init|=
+name|c
+operator|.
+name|getVar
+argument_list|(
+name|oneVar
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|oldVar
+operator|.
+name|compareToIgnoreCase
+argument_list|(
+name|newVar
+argument_list|)
+operator|!=
+literal|0
+condition|)
+block|{
+name|needsRefresh
+operator|=
+literal|true
+expr_stmt|;
+break|break;
+block|}
+block|}
+block|}
+return|return
+name|get
+argument_list|(
+name|c
+argument_list|,
+name|needsRefresh
+argument_list|)
+return|;
+block|}
+comment|/**    * get a connection to metastore. see get(HiveConf) function for comments    * @param c new conf    * @param needsRefresh if true then creates a new one    * @return    * @throws HiveException    */
+specifier|public
+specifier|static
+name|Hive
+name|get
+parameter_list|(
+name|HiveConf
+name|c
+parameter_list|,
+name|boolean
+name|needsRefresh
+parameter_list|)
+throws|throws
+name|HiveException
+block|{
 if|if
 condition|(
 name|db
 operator|==
 literal|null
+operator|||
+name|needsRefresh
 condition|)
 block|{
-comment|// TODO - this doesn't work if the user switches to a different metadb server
-comment|// during the same session. revisit.
+name|closeCurrent
+argument_list|()
+expr_stmt|;
 name|c
 operator|.
 name|set
@@ -579,7 +712,7 @@ argument_list|(
 operator|new
 name|HiveConf
 argument_list|(
-name|ParseDriver
+name|Hive
 operator|.
 name|class
 argument_list|)
@@ -589,6 +722,26 @@ block|}
 return|return
 name|db
 return|;
+block|}
+specifier|public
+specifier|static
+name|void
+name|closeCurrent
+parameter_list|()
+block|{
+if|if
+condition|(
+name|db
+operator|!=
+literal|null
+condition|)
+block|{
+name|db
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 comment|/**    * Hive    *    * @param argFsRoot    * @param c    *    */
 specifier|private
@@ -606,83 +759,27 @@ name|conf
 operator|=
 name|c
 expr_stmt|;
-try|try
-block|{
-name|msc
-operator|=
-name|this
-operator|.
-name|createMetaStoreClient
-argument_list|()
-expr_stmt|;
 block|}
-catch|catch
-parameter_list|(
-name|MetaException
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|HiveException
-argument_list|(
-literal|"Unable to open connection to metastore"
-argument_list|,
-name|e
-argument_list|)
-throw|;
-block|}
-block|}
-specifier|public
-specifier|static
+comment|/**    * closes the connection to metastore for the calling thread    */
+specifier|private
 name|void
-name|closeCurrent
+name|close
 parameter_list|()
-block|{
-if|if
-condition|(
-name|Hive
-operator|.
-name|db
-operator|!=
-literal|null
-condition|)
 block|{
 name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"Closing current connection to Hive Metastore."
+literal|"Closing current thread's connection to Hive Metastore."
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
 name|db
 operator|.
-name|msc
-operator|!=
-literal|null
-condition|)
-block|{
-name|db
+name|threadLocalMSC
 operator|.
-name|msc
-operator|.
-name|close
+name|remove
 argument_list|()
 expr_stmt|;
-block|}
-name|db
-operator|.
-name|msc
-operator|=
-literal|null
-expr_stmt|;
-name|db
-operator|=
-literal|null
-expr_stmt|;
-block|}
 block|}
 comment|/**    * Creates a table metdata and the directory for the table data    * @param tableName name of the table    * @param columns list of fields of the table    * @param partCols partition keys of the table    * @param fileInputFormat Class of the input format of the table data file    * @param fileOutputFormat Class of the output format of the table data file    * @throws HiveException thrown if the args are invalid or if the metadata or the data directory couldn't be created    */
 specifier|public
@@ -1003,7 +1100,8 @@ name|MetaException
 throws|,
 name|TException
 block|{
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|alter_table
 argument_list|(
@@ -1077,7 +1175,8 @@ operator|.
 name|checkValidity
 argument_list|()
 expr_stmt|;
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|createTable
 argument_list|(
@@ -1213,7 +1312,8 @@ name|HiveException
 block|{
 try|try
 block|{
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|dropTable
 argument_list|(
@@ -1423,7 +1523,8 @@ try|try
 block|{
 name|tTable
 operator|=
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|getTable
 argument_list|(
@@ -1849,7 +1950,8 @@ block|{
 try|try
 block|{
 return|return
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|getTables
 argument_list|(
@@ -1896,7 +1998,8 @@ block|{
 try|try
 block|{
 return|return
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|getTables
 argument_list|(
@@ -1940,7 +2043,8 @@ throws|,
 name|TException
 block|{
 return|return
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|createDatabase
 argument_list|(
@@ -1964,7 +2068,8 @@ throws|,
 name|TException
 block|{
 return|return
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|dropDatabase
 argument_list|(
@@ -2170,7 +2275,8 @@ try|try
 block|{
 name|tpart
 operator|=
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|appendPartition
 argument_list|(
@@ -2362,7 +2468,8 @@ try|try
 block|{
 name|tpart
 operator|=
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|getPartition
 argument_list|(
@@ -2405,7 +2512,8 @@ argument_list|)
 expr_stmt|;
 name|tpart
 operator|=
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|appendPartition
 argument_list|(
@@ -2496,7 +2604,8 @@ block|{
 try|try
 block|{
 return|return
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|dropPartition
 argument_list|(
@@ -2571,7 +2680,8 @@ try|try
 block|{
 name|names
 operator|=
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|listPartitionNames
 argument_list|(
@@ -2657,7 +2767,8 @@ try|try
 block|{
 name|tParts
 operator|=
-name|msc
+name|getMSC
+argument_list|()
 operator|.
 name|listPartitions
 argument_list|(
@@ -3653,6 +3764,41 @@ name|this
 operator|.
 name|conf
 argument_list|)
+return|;
+block|}
+comment|/**    *     * @return the metastore client for the current thread    * @throws MetaException    */
+specifier|private
+name|IMetaStoreClient
+name|getMSC
+parameter_list|()
+throws|throws
+name|MetaException
+block|{
+name|IMetaStoreClient
+name|msc
+init|=
+name|threadLocalMSC
+operator|.
+name|get
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|msc
+operator|==
+literal|null
+condition|)
+block|{
+name|msc
+operator|=
+name|this
+operator|.
+name|createMetaStoreClient
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|msc
 return|;
 block|}
 specifier|public
