@@ -499,13 +499,9 @@ name|hadoop
 operator|.
 name|hive
 operator|.
-name|serde2
+name|serde
 operator|.
-name|thrift
-operator|.
-name|test
-operator|.
-name|Complex
+name|Constants
 import|;
 end_import
 
@@ -519,9 +515,29 @@ name|hadoop
 operator|.
 name|hive
 operator|.
-name|serde
+name|serde2
 operator|.
-name|Constants
+name|ThriftDeserializer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|serde2
+operator|.
+name|thrift
+operator|.
+name|test
+operator|.
+name|Complex
 import|;
 end_import
 
@@ -578,48 +594,6 @@ operator|.
 name|protocol
 operator|.
 name|TBinaryProtocol
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
-name|serde2
-operator|.
-name|ThriftDeserializer
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|nio
-operator|.
-name|channels
-operator|.
-name|FileChannel
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|antlr
-operator|.
-name|runtime
-operator|.
-name|tree
-operator|.
-name|*
 import|;
 end_import
 
@@ -4948,7 +4922,6 @@ argument_list|,
 literal|false
 argument_list|)
 expr_stmt|;
-comment|/*           XXX Ugly hack - uncomment this to test without DDLs.           Should be removed once DDL/metastore mt issues are resolved           synchronized (this.getClass()) {           qt.executeOne(fname);           }         */
 name|qt
 operator|.
 name|executeClient
